design in aarticle

--- a/checkout.html
+++ b/checkout.html
@@ -95,6 +95,7 @@
                                         <div class="control-group">
                                             <div id="content-input" class="input-group">
                                                 <div id="products" class="form-control"></div>
+                                                <input class="content" style="visibility: hidden" id="content" type="text"/>
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i id="delete"
                                                             class="fi fi-br-shield-check"></i></div>
