--- a/checkout.html
+++ b/checkout.html
@@ -107,7 +107,7 @@
                                                 <input type="text" class="form-control" placeholder="Nombre"
                                                     required="required" />
                                                 <div class="input-group-append">
-                                                    <div class="input-group-text"><i class="far fa-user"></i></div>
+                                                    <div class="input-group-text"><i class="fi fi-rs-user"></i></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -116,7 +116,7 @@
                                                 <input type="email" class="form-control" placeholder="Correo"
                                                     required="required" />
                                                 <div class="input-group-append">
-                                                    <div class="input-group-text"><i class="far fa-envelope"></i></div>
+                                                    <div class="input-group-text"><i class="fi fi-rr-envelope"></i></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -125,7 +125,7 @@
                                                 <input type="text" class="form-control" placeholder="Cel"
                                                     required="required" />
                                                 <div class="input-group-append">
-                                                    <div class="input-group-text"><i class="fa fa-mobile-alt"></i></div>
+                                                    <div class="input-group-text"><i class="fi fi-rr-smartphone"></i></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -136,7 +136,7 @@
                                                     data-toggle="datetimepicker" />
                                                 <div class="input-group-append" data-target="#date"
                                                     data-toggle="datetimepicker">
-                                                    <div class="input-group-text"><i class="far fa-calendar-alt"></i>
+                                                    <div class="input-group-text"><i class="fi fi-rr-calendar"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -148,7 +148,7 @@
                                                     data-toggle="datetimepicker" />
                                                 <div class="input-group-append" data-target="#time"
                                                     data-toggle="datetimepicker">
-                                                    <div class="input-group-text"><i class="far fa-clock"></i></div>
+                                                    <div class="input-group-text"><i class="fi fi-rr-time-check"></i></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -168,7 +168,7 @@
                                                     <option value="10">10 Persona</option>
                                                 </select>
                                                 <div class="input-group-append">
-                                                    <div class="input-group-text"><i class="fa fa-chevron-down"></i>
+                                                    <div class="input-group-text"><i class="fi fi-rr-angle-down"></i>
                                                     </div>
                                                 </div>
                                             </div>
