--- a/checkout.html
+++ b/checkout.html
@@ -136,7 +136,7 @@
                                                     data-toggle="datetimepicker" />
                                                 <div class="input-group-append" data-target="#date"
                                                     data-toggle="datetimepicker">
-                                                    <div class="input-group-text"><i class="fi fi-rr-calendar"></i>
+                                                    <div class="input-group-text"><i class="fi fi-rs-calendar"></i>
                                                     </div>
                                                 </div>
                                             </div>
