carousel with gliderJS

--- a/shop.html
+++ b/shop.html
@@ -7,10 +7,13 @@
     <script defer src="js/carrousel.js"></script>
     <script src="js/acountCart.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Medellín, Colombia, Hoteles, Hotels, Hoteles en Medellín, Hostales en Medellín, hostal, resort, alojamiento, vacaciones, ofertas, paquetes en Medellín, vacaciones en Medellín, motel, hostal, bed and breakfast, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, viajes, paquete, paquetes, paquetes de tures, tours, tour, tures en medellin">
-    <meta content="Hoteles y hostales en Medellín, precios más baratos para los mas de 130 hoteles en Medellín 2022." name="description">
+    <meta name="keywords"
+        content="Medellín, Colombia, Hoteles, Hotels, Hoteles en Medellín, Hostales en Medellín, hostal, resort, alojamiento, vacaciones, ofertas, paquetes en Medellín, vacaciones en Medellín, motel, hostal, bed and breakfast, resort, alojamiento, recomendaciones, recomendado, hotel, hoteles, vacaciones, opiniones, consejos, guía, viajes, paquete, paquetes, paquetes de tures, tours, tour, tures en medellin">
+    <meta content="Hoteles y hostales en Medellín, precios más baratos para los mas de 130 hoteles en Medellín 2022."
+        name="description">
     <meta property="og:title" content="Las 10 MEJORES Excursiones y Tours en Cartagena 2022 - TourOpen">
-    <meta property="og:description" content="Hoteles, albergues, hostales en Medellín, precios más baratos para los mas de 130 hoteles en Medellín 2022.">
+    <meta property="og:description"
+        content="Hoteles, albergues, hostales en Medellín, precios más baratos para los mas de 130 hoteles en Medellín 2022.">
 
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
@@ -58,7 +61,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Alojamientos</a>
                         <div class="dropdown-menu">
-                            <a href="hoteles-en-cartagena-de-indias.html" class="dropdown-item">Alojamientos en Cartagena</a>
+                            <a href="hoteles-en-cartagena-de-indias.html" class="dropdown-item">Alojamientos en
+                                Cartagena</a>
                             <a href="hoteles-en-bogota.html" class="dropdown-item">Alojamientos en Bogotá</a>
                             <a href="hoteles-en-medellin.html" class="dropdown-item active">Alojamientos en Medellín</a>
                         </div>
@@ -89,7 +93,7 @@
                             <label for="originCity">Ciudad</label>
                             <hr>
                             <div class="container-b-city-input">
-                                <i id="todos"  class="fi fi-rs-marker"></i>
+                                <i id="todos" class="fi fi-rs-marker"></i>
                                 <input id="input_booking" type="text" placeholder="Dónde">
                             </div>
                         </div>
@@ -110,7 +114,8 @@
                             </div>
                         </div>
                         <div class="container-b-btn">
-                            <a id="btn-cus" class="btn custom-btn" href="https://www.booking.com/searchresults.es.html?aid=2233299&sid=b002c9a886e1b7d377792e7b91fd1a0e&sb=1&src=searchresults&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Fsearchresults.es.html%3Faid%3D2233299%3Bsid%3Db002c9a886e1b7d377792e7b91fd1a0e%3Btmpl%3Dsearchresults%3Bac_click_type%3Db%3Bac_position%3D0%3Bcheckin_month%3D4%3Bcheckin_monthday%3D11%3Bcheckin_year%3D2022%3Bcheckout_month%3D4%3Bcheckout_monthday%3D12%3Bcheckout_year%3D2022%3Bcity%3D-578472%3Bclass_interval%3D1%3Bdest_id%3D-592318%3Bdest_type%3Dcity%3Bdtdisc%3D0%3Bfrom_sf%3D1%3Bgroup_adults%3D2%3Bgroup_children%3D0%3Biata%3DMDE%3Binac%3D0%3Bindex_postcard%3D0%3Blabel_click%3Dundef%3Bno_rooms%3D1%3Boffset%3D0%3Bpostcard%3D0%3Braw_dest_type%3Dcity%3Broom1%3DA%252CA%3Bsb_price_type%3Dtotal%3Bsearch_selected%3D1%3Bshw_aparth%3D1%3Bslp_r_match%3D0%3Bsrc%3Dsearchresults%3Bsrc_elem%3Dsb%3Bsrpvid%3D1ccc0723cf190150%3Bss%3DMedell%25C3%25ADn%252C%2520Antioquia%252C%2520Colombia%3Bss_all%3D0%3Bss_raw%3Dmedellin%3Bssb%3Dempty%3Bsshis%3D0%3Bssne%3DBogot%25C3%25A1%3Bssne_untouched%3DBogot%25C3%25A1%26%3B&ss=Medell%C3%ADn&is_ski_area=0&ssne=Medell%C3%ADn&ssne_untouched=Medell%C3%ADn&city=-592318&checkin_year=2022&checkin_month=4&checkin_monthday=11&checkout_year=2022&checkout_month=4&checkout_monthday=12&group_adults=2&group_children=0&no_rooms=1&from_sf=1">Buscar</a>
+                            <a id="btn-cus" class="btn custom-btn"
+                                href="https://www.booking.com/searchresults.es.html?aid=2233299&sid=b002c9a886e1b7d377792e7b91fd1a0e&sb=1&src=searchresults&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Fsearchresults.es.html%3Faid%3D2233299%3Bsid%3Db002c9a886e1b7d377792e7b91fd1a0e%3Btmpl%3Dsearchresults%3Bac_click_type%3Db%3Bac_position%3D0%3Bcheckin_month%3D4%3Bcheckin_monthday%3D11%3Bcheckin_year%3D2022%3Bcheckout_month%3D4%3Bcheckout_monthday%3D12%3Bcheckout_year%3D2022%3Bcity%3D-578472%3Bclass_interval%3D1%3Bdest_id%3D-592318%3Bdest_type%3Dcity%3Bdtdisc%3D0%3Bfrom_sf%3D1%3Bgroup_adults%3D2%3Bgroup_children%3D0%3Biata%3DMDE%3Binac%3D0%3Bindex_postcard%3D0%3Blabel_click%3Dundef%3Bno_rooms%3D1%3Boffset%3D0%3Bpostcard%3D0%3Braw_dest_type%3Dcity%3Broom1%3DA%252CA%3Bsb_price_type%3Dtotal%3Bsearch_selected%3D1%3Bshw_aparth%3D1%3Bslp_r_match%3D0%3Bsrc%3Dsearchresults%3Bsrc_elem%3Dsb%3Bsrpvid%3D1ccc0723cf190150%3Bss%3DMedell%25C3%25ADn%252C%2520Antioquia%252C%2520Colombia%3Bss_all%3D0%3Bss_raw%3Dmedellin%3Bssb%3Dempty%3Bsshis%3D0%3Bssne%3DBogot%25C3%25A1%3Bssne_untouched%3DBogot%25C3%25A1%26%3B&ss=Medell%C3%ADn&is_ski_area=0&ssne=Medell%C3%ADn&ssne_untouched=Medell%C3%ADn&city=-592318&checkin_year=2022&checkin_month=4&checkin_monthday=11&checkout_year=2022&checkout_month=4&checkout_monthday=12&group_adults=2&group_children=0&no_rooms=1&from_sf=1">Buscar</a>
                         </div>
                     </div>
                 </div>
@@ -125,8 +130,17 @@
         <p class="w">Tours, Pasadías</p>
         <h2>Explora las 10 mejores excursiones en Cartagena</h2>
     </div>
-    <div id="content_product" class="page-content">
-       <!-- Products Here (acountCard.js) -->
+    <div class="carrousel">
+        <div class="carrousel__container">
+            <button aria-label="anterior" class="carousel__btn-anterior"><i class="fi fi-rr-angle-left"></i></button>
+            <div id="content_product" class="page-content content_product">
+                <!-- Products Here (acountCard.js) -->
+            </div>
+            <button aria-label="despues" class="carousel__btn-despues"><i class="fi fi-rr-angle-right"></i></button>
+        </div>
+        <div role="tablist" class="carousel__indicadores">
+
+        </div>
     </div>
     <!-- Insert Product End -->
 
@@ -190,6 +204,8 @@
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -208,6 +224,7 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="js/acountCart.js"></script>
+    <script src="js/carrouselProducts.js" type="module"></script>
 </body>
 
 </html>
