new section in shop

--- a/shop.html
+++ b/shop.html
@@ -142,7 +142,24 @@
     </div>
     <!-- Insert Product End -->
 
-
+    <div class="menu">
+        <div class="container">
+            <div class="section-header text-center">
+                <p>Tours En La Ciudad</p>
+                <h2>Tours Dentro De Cartagena</h2>
+            </div>
+        </div>
+        <div class="carrousel">
+            <div class="carrousel__container">
+                <div id="carousel__container_content_product" class="page-content carousel__container_content_product">
+                    <!-- Products Here (acountCard.js) -->
+                </div>
+            </div>
+            <div role="tablist" class="carousel__indicadores_inside">
+    
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer Start -->
