add submit chck

--- a/shop.html
+++ b/shop.html
@@ -130,6 +130,9 @@
         <p class="w">Tours, Pasadías</p>
         <h2>Explora las 10 mejores excursiones en Cartagena</h2>
     </div>
+    <div>
+        <p class="text-center">Las Islas privadas y publicas de Cartagena</p>
+    </div>
     <div class="carrousel">
         <div class="carrousel__container">
             <div id="content_product" class="page-content content_product">
@@ -148,6 +151,9 @@
                 <p>Tours En La Ciudad</p>
                 <h2>Tours Dentro De Cartagena</h2>
             </div>
+        </div>
+        <div>
+            <p class="text-center">Tures en la Ciudad de Cartagena | Diferentes opciones de entretenimiento</p>
         </div>
         <div class="carrousel">
             <div class="carrousel__container">
