--- a/checkout.html
+++ b/checkout.html
@@ -91,11 +91,11 @@
                         <div class="container_product text-center" id="container_product">
                             <div>
                                 <div class="booking-form">
-                                    <form id="reservar" netlify>
+                                    <form id="reservar" name="contact" method="POST" data-netlify="true">
                                         <div class="control-group">
                                             <div id="content-input" class="input-group">
                                                 <div id="products" class="form-control"></div>
-                                                <input class="content" style="visibility: hidden" id="content" type="text"/>
+                                                <input class="content" style="visibility: hidden" id="content-input__title" type="text"/>
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i id="delete"
                                                             class="fi fi-br-shield-check"></i></div>
