--- a/checkout.html
+++ b/checkout.html
@@ -91,7 +91,7 @@
                         <div class="container_product text-center" id="container_product">
                             <div>
                                 <div class="booking-form">
-                                    <form id="reservar" name="contact" method="POST" data-netlify="true">
+                                    <form name="contact" method="POST" data-netlify="true">
                                         <div class="control-group">
                                             <div id="content-input" class="input-group">
                                                 <div id="products" class="form-control"></div>
