--- a/checkout.html
+++ b/checkout.html
@@ -95,7 +95,7 @@
                                         <div class="control-group">
                                             <div id="content-input" class="input-group">
                                                 <div id="products" class="form-control"></div>
-                                                <input class="content" style="visibility: hidden" id="content-input__title" type="text"/>
+                                                <input name="Tours" class="content" style="visibility: hidden" id="content-input__title" type="text"/>
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i id="delete"
                                                             class="fi fi-br-shield-check"></i></div>
@@ -104,7 +104,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group">
-                                                <input type="text" class="form-control" placeholder="Nombre"
+                                                <input name="Nombre" type="text" class="form-control" placeholder="Nombre"
                                                     required="required" />
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i class="fi fi-rs-user"></i></div>
@@ -113,7 +113,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group">
-                                                <input type="email" class="form-control" placeholder="Correo"
+                                                <input name="Email" type="email" class="form-control" placeholder="Correo"
                                                     required="required" />
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i class="fi fi-rr-envelope"></i></div>
@@ -122,7 +122,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group">
-                                                <input type="text" class="form-control" placeholder="Cel"
+                                                <input name="Cel" type="text" class="form-control" placeholder="Cel"
                                                     required="required" />
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i class="fi fi-rr-smartphone"></i></div>
@@ -131,7 +131,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group date" id="date" data-target-input="nearest">
-                                                <input type="text" class="form-control datetimepicker-input"
+                                                <input name="Fecha" type="text" class="form-control datetimepicker-input"
                                                     placeholder="Fecha" data-target="#date"
                                                     data-toggle="datetimepicker" />
                                                 <div class="input-group-append" data-target="#date"
@@ -143,7 +143,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group time" id="time" data-target-input="nearest">
-                                                <input type="text" class="form-control datetimepicker-input"
+                                                <input name="Hora" type="text" class="form-control datetimepicker-input"
                                                     placeholder="Hora" data-target="#time"
                                                     data-toggle="datetimepicker" />
                                                 <div class="input-group-append" data-target="#time"
@@ -154,7 +154,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group">
-                                                <select class="custom-select form-control">
+                                                <select name="Numero de personas" class="custom-select form-control">
                                                     <option selected>Numero de personas</option>
                                                     <option value="1">1 Persona</option>
                                                     <option value="2">2 Persona</option>
