--- a/checkout.html
+++ b/checkout.html
@@ -91,7 +91,7 @@
                         <div class="container_product text-center" id="container_product">
                             <div>
                                 <div class="booking-form">
-                                    <form name="contact" method="POST" data-netlify="true">
+                                    <form netlify>
                                         <div class="control-group">
                                             <div id="content-input" class="input-group">
                                                 <div id="products" class="form-control"></div>
@@ -122,7 +122,7 @@
                                         </div>
                                         <div class="control-group">
                                             <div class="input-group">
-                                                <input name="Cel" type="text" class="form-control" placeholder="Cel"
+                                                <input name="Cel" type="tel" class="form-control" placeholder="Cel"
                                                     required="required" />
                                                 <div class="input-group-append">
                                                     <div class="input-group-text"><i class="fi fi-rr-smartphone"></i></div>
